--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.6.12",
     "core-js": "^3.8.3",
-    "swiper": "^11.0.5",
+    "gsap": "^3.12.3",
+    "intersection-observer": "^0.12.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
